# drone_image_segmentation

./: .gitignore  pyproject.toml
data/: classes_dict.txt  colormaps.toml  colormaps.xlsx  download_datasets.sh
lib/: helpers.py
tests/: test_helpers.py
